# seu-unirobot-unofficial-guidance

./: .gitignore  CMakeLists.txt  README.md  aarch64-build.py  x86_64-build.py  yolov3-tiny.md  探索QT5调试器.md
MVSDK/: install.sh
MVSDK/demo/GTK_Demo/src/: Demo.cpp
MVSDK/demo/QT_Demo/: mainwindow.cpp
MVSDK/include/: CameraApi.h  CameraDefine.h
MYNT/: README.md
ball/: 0.txt  CMakeLists.txt  main.c
ball_python/: darknet.py  my.cfg  voc.data
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/controller/: CMakeLists.txt  main.cpp
src/app/controller/dynamixel/: CMakeLists.txt
src/app/controller/gpio/: CMakeLists.txt  gpio.cpp  gpio.hpp
src/app/controller/options/: CMakeLists.txt  options.cpp  options.hpp
src/app/controller/player/: CMakeLists.txt  play_with_remote.cpp  player.cpp  player.hpp
src/app/controller/player/core/: CMakeLists.txt  adapter.hpp  worldmodel.cpp  worldmodel.hpp
src/app/controller/player/engine/: CMakeLists.txt
src/app/controller/player/engine/action/: ActionEngine.cpp  ActionEngine.hpp  CMakeLists.txt
src/app/controller/player/engine/led/: CMakeLists.txt  LedEngine.cpp  LedEngine.hpp
src/app/controller/player/engine/scan/: CMakeLists.txt  ScanEngine.cpp  ScanEngine.hpp
src/app/controller/player/engine/walk/: CMakeLists.txt  WalkEngine.cpp  WalkEngine.hpp
src/app/controller/player/engine/walk/QuinticWalk/: Angle.h  AxisAngle.h  CMakeLists.txt  Combination.cpp  Combination.hpp  CubicSpline.cpp  CubicSpline.hpp  Euler.h  Footstep.cpp  Footstep.hpp  LinearSpline.cpp  LinearSpline.hpp  NewtonBinomial.cpp  NewtonBinomial.hpp  Polynom.cpp  Polynom.hpp  QuinticWalk.cpp  QuinticWalk.hpp  SmoothSpline.cpp  SmoothSpline.hpp  Spline.cpp  Spline.hpp  SplineContainer.hpp  TrajectoryUtils.cpp  TrajectoryUtils.h  VectorLabel.hpp
src/app/controller/player/engine/walk0/: CMakeLists.txt  CubicSpline.cpp  CubicSpline.hpp  Polynom.cpp  Polynom.hpp  SmoothSpline.cpp  SmoothSpline.hpp  Spline.cpp  Spline.hpp  WalkEngine.cpp  WalkEngine.hpp
src/app/controller/player/sensor/: CMakeLists.txt  button.cpp  button.hpp  camera.cpp  camera.hpp  imu.cpp  imu.hpp  motor.cpp  motor.hpp  sensor.hpp
src/app/controller/player/server/: CMakeLists.txt  server.cpp  server.hpp
src/app/controller/player/task/: action_task.hpp  led_task.hpp  look_task.hpp  task.hpp  walk_task.hpp
src/app/controller/player/vision/: CMakeLists.txt  compare.hpp  vision.cpp  vision.hpp
src/app/strategist/: common.py  config.py  main.py  options.py  task.py  worldmodel.py
src/data/action/: scan.conf  walk.conf
src/data/algorithm/: color.conf  robocup.names
src/data/device/: camera.conf
src/lib/: CMakeLists.txt  class_exception.hpp  common.hpp  configuration.hpp  model.hpp  pattern.hpp  singleton.hpp  tcp.hpp  timer.hpp
src/lib/cuda/: CMakeLists.txt  cudaproc.cu  cudaproc.h
src/lib/darknet/: CMakeLists.txt  activation_layer.c  activations.c  activations.h  avgpool_layer.c  batchnorm_layer.c  blas.c  blas.h  box.c  box.h  clist.c  clist.h  col2im.c  col2im.h  connected_layer.c  convolutional_kernels.cu  convolutional_layer.c  convolutional_layer.h  cost_layer.c  cpu_gemm.c  crnn_layer.c  crop_layer.c  cuda.c  cuda.h  data.c  data.h  deconvolutional_layer.c  detection_layer.c  dropout_layer.c  gemm.c  gemm.h  getopt.c  getopt.h  gru_layer.c  im2col.c  im2col.h  im2col_kernels.cu  image.c  image.h  layer.c  (+26 more)
src/lib/imageproc/: CMakeLists.txt  imageproc.cpp  imageproc.hpp
src/lib/math/: math.hpp  matrix.hpp  number.hpp
src/lib/parser/: action_parser.hpp  basic_parser.hpp  camera_parser.hpp  config_parser.hpp  field_parser.hpp  offset_parser.hpp  robot_parser.hpp
src/lib/robot/: CMakeLists.txt  humanoid.cpp  humanoid.hpp  robot_define.hpp
src/scripts/: SSHConnection.py  code_format.py  common.py  config.py  copy_camera_file.py  download.py  download_color_file.py  exec.py  install_auto_run.py  set_wifi.py  uninstall_auto_run.py
src/tools/: CMakeLists.txt
src/tools/action_debuger/: CMakeLists.txt  action_debuger.cpp  action_debuger.hpp  main.cpp
src/tools/action_monitor/: CMakeLists.txt  action_monitor.cpp  action_monitor.hpp  main.cpp
src/tools/image_debuger/: CMakeLists.txt  image_debuger.cpp  image_debuger.hpp  main.cpp
src/tools/image_monitor/: CMakeLists.txt  image_monitor.cpp  image_monitor.hpp  main.cpp
src/tools/lib/: CMakeLists.txt
src/tools/lib/options/: CMakeLists.txt  options.cpp  options.hpp
src/tools/lib/tcp_client/: CMakeLists.txt  tcp_client.cpp  tcp_client.hpp
src/tools/team_monitor/: CMakeLists.txt  main.cpp  team_monitor.cpp  team_monitor.hpp
src/tools/ui/: CMakeLists.txt  ImageLabel.cpp  ImageLabel.hpp  RobotGL.cpp  RobotGL.hpp  camera_setter.cpp  camera_setter.hpp  joint_revise.cpp  joint_revise.hpp  walk_remote.cpp  walk_remote.hpp
yolov3-tiny/: export2xml.py  export_1302.txt  template.xml  voc.data
