find_package(Qt5Widgets CONFIG REQUIRED)
find_package(Qt5Core CONFIG REQUIRED)
find_package(Qt5Gui CONFIG REQUIRED)
set(CMAKE_AUTOMOC ON)

include_directories(./)
include_directories(./lib)
add_subdirectory(ui)
add_subdirectory(lib)
add_subdirectory(action_debuger)
add_subdirectory(action_monitor)
add_subdirectory(image_monitor)
add_subdirectory(image_debuger)
add_subdirectory(team_monitor)
